@@ -5,48 +5,83 @@ SITENAME=$1.$2.cloudapp.azure.com
 INSTALLDIR=/opt/shibboleth-idp
 
 apt-get -y update
-apt-get -y upgrade
-apt-get -y install unzip
+
+echo "==============>Printing values of all variables"
+echo "domain"
+echo $domain
+echo "location"
+echo $location
+echo "Sitename"
+echo $SITENAME
+
+
+#install Oracle JDK 7
+echo debconf shared/accepted-oracle-license-v1-1 select true | \
+sudo debconf-set-selections
+
+echo debconf shared/accepted-oracle-license-v1-1 seen true | \
+sudo debconf-set-selections
+
+echo "==============>Installing JDK 8"
+
+apt-get -y install python-software-properties
+add-apt-repository -y ppa:webupd8team/java
+apt-get -y update
+apt-get -y install oracle-java8-installer
+
+
+#install Tomcat 8
+
+echo "==============>Installing tomcat8"
+
 apt-get -y install tomcat8
+export JAVA_HOME=/usr/lib/jvm/java-8-oracle
+export PATH=$PATH:$JAVA_HOME/bin
+export JRE_HOME=/usr/lib/jvm/java-8-oracle/jre
+export JAVA_OPTS="-XX:+AggressiveOpts -Xms256m -Xmx512m -XX:MaxPermSize=256m -XX:+DisableExplicitGC"
+
+sed -i 's/#AUTHBIND=no/AUTHBIND=yes/g' /etc/default/tomcat8
+
+#generating the self signed SSL certificate for tomcat8
+
+echo "==============>Configuring SSL for tomcat8"
+
+mkdir /usr/share/tomcat8/keystore
+cd $JAVA_HOME/bin
 
 SSLKEYPASSWORD=$(openssl rand -base64 12)
 
-mkdir /usr/share/tomcat8/keystore
-keytool -genkey -alias tomcat -keyalg RSA -keystore /usr/share/tomcat8/keystore/server.keystore -keysize 2048 -storepass $SSLKEYPASSWORD -keypass $SSLKEYPASSWORD -dname "cn=testname, ou=shibbolethOU, o=shibbolethO, c=US"
-sed -i '/redirectPort="8443"/a  <Connector port="8443"  protocol="org.apache.coyote.http11.Http11NioProtocol" SSLEnabled="true" maxThreads="150" scheme="https" secure="true"  clientAuth="false" sslProtocol="TLS" address="0.0.0.0" keystoreFile="/\usr/\share\/tomcat8/\keystore/\server.keystore" keystorePass="'$SSLKEYPASSWORD'"/>' /var/lib/tomcat8/conf/server.xml
+keytool -genkey -alias tomcat -keyalg RSA -keystore /usr/share/tomcat8/keystore/server.keystore -keysize 2048 -storepass $SSLKEYPASSWORD -keypass $SSLKEYPASSWORD -dname "cn=$SITENAME, ou=shibbolethOU, o=shibbolethO, c=US"
+sed -i -e 's,redirectPort="8443",redirectPort="8443" address="0.0.0.0",g' /var/lib/tomcat8/conf/server.xml
+sed -i '/redirectPort="8443"/a  <Connector port="8443" protocol="HTTP/1.1" SSLEnabled="true" maxThreads="150" scheme="https" secure="true"  clientAuth="false" sslProtocol="TLS" address="0.0.0.0" keystoreFile="/\usr/\share\/tomcat8/\keystore/\server.keystore" keystorePass="'$SSLKEYPASSWORD'"/>' /var/lib/tomcat8/conf/server.xml
 
-export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
-echo JAVA_HOME='"'$JAVA_HOME'"' >> /etc/environment
-source /etc/environment
+#download jstl as it is not distributed with tomcat8 and is required by Shibboleth
 
-echo export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64 >> /etc/profile
-echo export CATALINA_HOME=/var/lib/tomcat8 >> /etc/profile
-source /etc/profile
+echo "==============>Adding JSTL to tomcat8"
 
+cd /usr/share/tomcat8/lib
+wget http://central.maven.org/maven2/jstl/jstl/1.2/jstl-1.2.jar
+chmod 777 jstl-1.2.jar
 
-sed -i 's,</tomcat-users>,  <role rolename="manager-gui"/>\n  <user username="admin" password="secret" roles="manager-gui"/>  \n</tomcat-users>,g'   /var/lib/tomcat8/conf/tomcat-users.xml
+#START Shibboleth installation
 
-#Change 128m to 512m
-sed -i 's/128m/512m/g'  /etc/default/tomcat8
-
-touch /etc/authbind/byport/8443
-chmod 0755 /etc/authbind/byport/8443
-chown tomcat8:tomcat8 /etc/authbind/byport/8443
-
-
-SCOPE=$(hostname -f)
-
-cd /usr/share
+echo "==============> Start Shibboleth installation"
+echo "==============> Download Shibboleth"
 
 # install Shibboleth
-wget http://shibboleth.net/downloads/identity-provider/3.3.2/shibboleth-identity-provider-3.3.2.zip -O shibboleth.zip
-unzip shibboleth.zip
+wget http://shibboleth.net/downloads/identity-provider/3.3.3/shibboleth-identity-provider-3.3.3.zip -O shibboleth.zip
+jar -xf shibboleth.zip
 
-cd shibboleth-identity-provider-3.3.2
+cd shibboleth-identity-provider-3.3.3
 chmod -R +x bin
 
+# generate a password for client-side encryption
 echo "idp.sealer.password = $(openssl rand -base64 12)" >credentials.properties
 chmod 0600 credentials.properties
+
+# preconfigure settings for a typical deployment
+
+echo "==============> Generate preconfig file"
 
 cat >temp.properties <<EOF
 idp.additionalProperties= /conf/ldap.properties, /conf/saml-nameid.properties, /conf/services.properties, /conf/credentials.properties
@@ -56,12 +91,12 @@ idp.signing.key= %{idp.home}/credentials/idp.key
 idp.signing.cert= %{idp.home}/credentials/idp.crt
 idp.encryption.key= %{idp.home}/credentials/idp.key
 idp.encryption.cert= %{idp.home}/credentials/idp.crt
-idp.entityID= https://$SITENAME:8443/idp/shibboleth
-idp.scope= $SCOPE
+idp.entityID= https://$SITENAME/idp/shibboleth
+idp.scope= $SITENAME
 idp.consent.StorageService= shibboleth.JPAStorageService
 idp.consent.userStorageKey= shibboleth.consent.AttributeConsentStorageKey
 idp.consent.userStorageKeyAttribute= %{idp.persistentId.sourceAttribute}
-idp.consent.allowGlobal= true
+idp.consent.allowGlobal= false
 idp.consent.compareValues= true
 idp.consent.maxStoredRecords= -1
 idp.ui.fallbackLanguages= en,de,fr
@@ -83,36 +118,32 @@ bash bin/install.sh \
 -Didp.host.name=$SITENAME \
 -Didp.scope=$SITENAME
 
-chown -R tomcat8 /opt/shibboleth-idp
+chown -R tomcat8 /opt/shibboleth-idp/
 
-cd /opt/shibboleth-idp/edit-webapp/WEB-INF/lib
-
-echo "==============>Adding JSTL to Tomcat8"
-
-wget https://build.shibboleth.net/nexus/service/local/repositories/thirdparty/content/javax/servlet/jstl/1.2/jstl-1.2.jar
-chmod 777 jstl-1.2.jar
-chown tomcat8 jstl-1.2.jar
+#edit all location's port 8443 /opt/shibboleth-idp/metadata/idp.metadata
+echo "==============> Updating the urls in metadata.xml"
 
 sed -i -e 's,https://'"$SITENAME"'/idp/profile/Shibboleth/SSO,https://'"$SITENAME"':8443/idp/profile/Shibboleth/SSO,g' /opt/shibboleth-idp/metadata/idp-metadata.xml
 sed -i -e 's,https://'"$SITENAME"'/idp/profile/SAML2/POST/SSO,https://'"$SITENAME"':8443/idp/profile/SAML2/POST/SSO,g' /opt/shibboleth-idp/metadata/idp-metadata.xml
 sed -i -e 's,https://'"$SITENAME"'/idp/profile/SAML2/POST-SimpleSign/SSO,https://'"$SITENAME"':8443/idp/profile/SAML2/POST-SimpleSign/SSO,g' /opt/shibboleth-idp/metadata/idp-metadata.xml
 sed -i -e 's,https://'"$SITENAME"'/idp/profile/SAML2/Redirect/SSO,https://'"$SITENAME"':8443/idp/profile/SAML2/Redirect/SSO,g' /opt/shibboleth-idp/metadata/idp-metadata.xml
 
-echo "<Context docBase=\"/opt/shibboleth-idp/war/idp.war\" privileged=\"true\" antiResourceLocking=\"false\" antijarLocking=\"false\" unpackWar=\"false\" swallowOutput=\"true\" />" > /var/lib/tomcat8/conf/Catalina/localhost/idp.xml
+# Use context deployment fragment for deploying idp.war file
+echo "==============> Adding application to tomcat8"
 
-mv  /usr/share/shibboleth-identity-provider-3.3.2/credentials.properties $INSTALLDIR/conf
+echo "<Context docBase=\"/opt/shibboleth-idp/war/idp.war\" privileged=\"true\" antiresourcelocking=\"false\" antijarlocking=\"false\" unpackwar=\"false\" swallowoutput=\"true\" />" > /var/lib/tomcat8/conf/Catalina/localhost/idp.xml
+mv credentials.properties $INSTALLDIR/conf
 
-cd /opt/shibboleth-idp
 echo -e "\nCreating self-signed certificate..."
 bin/keygen.sh --lifetime 3 \
 --certfile $INSTALLDIR/credentials/idp.crt \
 --keyfile $INSTALLDIR/credentials/idp.key \
 --hostname $SITENAME \
---uriAltName https://$SITENAME:8443/idp/shibboleth
+--uriAltName https://$SITENAME/idp/shibboleth
 echo ...done
 chmod 600 $INSTALLDIR/credentials/idp.key
 
-
+# set owner of key file and directories
 getent passwd tomcat8 >/dev/null && TCUSER=tomcat8 || TCUSER=tomcat
 chown $TCUSER $INSTALLDIR/credentials/idp.key
 chown $TCUSER $INSTALLDIR/credentials/sealer.*
@@ -123,6 +154,5 @@ chown $TCUSER $INSTALLDIR/conf/credentials.properties
 #allow access to public
 sed -i -e "s~'::1/128'~'::1/128', '0.0.0.0/0'~g" /opt/shibboleth-idp/conf/access-control.xml
 
-bin/build.sh -Didp.target.dir=/opt/shibboleth-idp
-
+#restart tomcat
 service tomcat8 restart
